Fixed gap below toolbar button

--- a/css/admin.less
+++ b/css/admin.less
@@ -242,7 +242,7 @@
 					transition: 0s visibility linear 0.1s, opacity 0.2s linear;
 					z-index: 101;
 					right: -10px;
-					top: 22px;
+					top: 100%;
 					width: 125px;
 
 					ul li a.so-row-delete {
